# Assessment_02

./: .gitignore  Assessment_02.sln  CMakeLists.txt  CMakePresets.json  README.md
Assessment_02/: Assessment_02  Assessment_02.cpp  Assessment_02.vcxproj  Assessment_02.vcxproj.filters  Book.cpp  Book.h
Assessment_02/headers/: Book.h  BookHelper.h
Assessment_02/source/: Assessment_02.cpp  Book.cpp
tests/: test.cpp
